correct school year and no border

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <h3> <a href="Contact.html">Contact me</a> </h3>
     </strong> </p>
   <hr>
-  <table border="1">
+  <table>
     <thead>
       <tr>
         <th>year</th>
@@ -41,7 +41,7 @@
       </tr>
       </thead>
       <tr>
-        <td>2015-2020</td>
+        <td>2006-2020</td>
         <td>school student</td>
       </tr>
       <tr>
